<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLoginFirstName"
        android:layout_width="272dp"
        android:layout_height="36dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/textfield_shape"
        android:ems="10"
        android:hint="@string/login_fname"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextLoginLastName"
        android:layout_width="272dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield_shape"
        android:ems="10"
        android:hint="@string/login_lname"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginFirstName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextLoginNumber"
        android:layout_width="272dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield_shape"
        android:ems="10"
        android:hint="@string/login_number"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginLastName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextLoginNumberVerify"
        android:layout_width="272dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield_shape"
        android:ems="10"
        android:hint="@string/login_number_verify"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginNumber"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="272dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corner_menu"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textSize="16sp"
        android:visibility="visible"
        app:backgroundTint="@color/main_menu_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginNumberVerify" />

</androidx.constraintlayout.widget.ConstraintLayout>