<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiveLocationActivity"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/background"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="77dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/share_live_location"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLiveLocationPhone"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="89dp"
        android:background="@color/background_settings"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="33dp"
        android:background="@color/background"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextLiveLocationPhone"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextLiveLocationMessage"
        android:layout_width="343dp"
        android:layout_height="194dp"
        android:layout_marginTop="25dp"
        android:background="@color/background_settings"
        android:gravity="start|top"
        android:hint="@string/enter_message_for_receiver"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLiveLocationPhone"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="51dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="17dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLiveLocationMessage">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/main_menu_buttons"
            android:text="@string/_30_min" />

        <View
            android:layout_width="5dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/main_menu_buttons"
            android:text="@string/_1_hour" />

        <View
            android:layout_width="5dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/main_menu_buttons"
            android:text="@string/_2_hours" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>