<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/btnSetting"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSos"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_corner_sos"
        android:text="@string/main_sos"
        android:textSize="48sp"
        app:backgroundTint="@color/sos_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSos">

        <Button
            android:id="@+id/btnFakeCall"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_menu"
            android:text="@string/main_fake_call"
            android:textSize="16sp"
            app:backgroundTint="@color/main_menu_buttons"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnLiveLocation"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_menu"
            android:text="@string/main_live_location"
            android:textSize="16sp"
            app:backgroundTint="@color/main_menu_buttons"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnEmerServices"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_menu"
            android:text="@string/main_emerg_services"
            android:textSize="16sp"
            app:backgroundTint="@color/main_menu_buttons"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>