<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsAccountActivity"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/background"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"

        android:text="@string/settings_account_account_info"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/settings_account_first_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/AccountEdit_FirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/AccountEdit_FirstName"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:layout_marginTop="5dp"

        android:background="@drawable/rounded_corner_menu"
        android:backgroundTint="@color/white"
        android:hint="@string/settings_account_enter_here"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/settings_account_last_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AccountEdit_FirstName" />

    <EditText
        android:id="@+id/AccountEdit_LastName"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:layout_marginTop="5dp"

        android:background="@drawable/rounded_corner_menu"
        android:backgroundTint="@color/white"
        android:hint="@string/settings_account_enter_here"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/settings_account_phone_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AccountEdit_LastName" />

    <EditText
        android:id="@+id/AccountEdit_Phone"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:layout_marginTop="5dp"

        android:background="@drawable/rounded_corner_menu"
        android:backgroundTint="@color/white"
        android:hint="@string/settings_account_enter_here"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnAccountSave"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_menu"
        android:fontFamily="sans-serif-light"
        android:text="@string/settings_account_save"
        android:textSize="20sp"
        app:backgroundTint="@color/main_menu_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AccountEdit_Phone" />


</androidx.constraintlayout.widget.ConstraintLayout>
