<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FakeCallActivity"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/background"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnNewCall"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_corner_menu"
        android:fontFamily="sans-serif-medium"
        android:onClick="play"
        android:text="@string/new_call"
        android:textSize="20sp"
        app:backgroundTint="@color/main_menu_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btnReturnCall"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corner_menu"
        android:fontFamily="sans-serif-medium"
        android:onClick="pause"
        android:text="@string/return_call"
        android:textSize="20sp"
        app:backgroundTint="@color/main_menu_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCallMessage" />

    <TextView
        android:id="@+id/newCallMessage"
        android:layout_width="215dp"
        android:layout_height="125dp"
        android:layout_marginTop="14dp"
        android:onClick="pause"
        android:text="@string/new_call_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewCall" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/main_fake_call"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/rounded_corner_menu"
        android:fontFamily="sans-serif-medium"
        android:onClick="stop"
        android:text="Stop Audio"
        android:textSize="20sp"
        app:backgroundTint="@color/main_menu_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCallMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>