<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsAboutActivity"
    android:background="@color/background">

    <ImageButton
    android:id="@+id/btnBack"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:background="@color/background"
    android:scaleType="fitCenter"
    android:tint="@color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/aboutAppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/about_app_header"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutMessageTextView"
        android:layout_width="351dp"
        android:layout_height="240dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="8sp"
        android:text="@string/about_app_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/student_details"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutMessageTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>